tests/fixtures/invalid/void_parameter_name.c
int take(void value) { return 0; }
int main(void) { return take(0); }
